--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,3 +1,8 @@
-# FROM node:16-alpine
-# WORKDIR /app-backend
-#  ...
+FROM node:16-alpine
+WORKDIR /app/backend
+COPY package.json .
+COPY package-lock.json .
+RUN npm install
+COPY . .
+EXPOSE 3001
+CMD [ "npm", "run", "dev" ]
