--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,11 +1,12 @@
 version: '3.9'
 services:
   frontend:
+    container_name: 'app_frontend'
     build: ./frontend
     ports:
       - 3000:3000
     platform: linux/x86_64
-    working_dir: /app-frontend
+    working_dir: /app/frontend
     depends_on:
       backend:
         condition: service_healthy
@@ -16,12 +17,12 @@ services:
       timeout: 10s
       retries: 5
   backend:
-    container_name: app_backend
+    container_name: 'app_backend'
     build: ./backend
     ports:
       - 3001:3001
     platform: linux/x86_64
-    working_dir: /app-backend
+    working_dir: /app/backend
     depends_on:
       db:
         condition: service_healthy
@@ -30,6 +31,7 @@ services:
       - JWT_SECRET=jwt_secret
       # Os dados abaixo se referem ao container `db`
       # Dica: Relembre aqui da comunicação interna entre containers
+      - DB_NAME=TRYBE_FUTEBOL_CLUBE
       - DB_USER=root
       - DB_PASS=123456
       - DB_HOST=db
@@ -40,7 +42,7 @@ services:
       retries: 5
   db:
     image: mysql:8.0.21
-    container_name: db
+    container_name: 'db'
     platform: linux/x86_64
     ports:
       - 3002:3306
